# marcdantic

./: .gitignore  Makefile  README.md  description.txt  main.py  marc_issue.py  marc_record.py  pyproject.toml  requirements.txt  run.sh  setup.py  sources.txt
marcdantic/: __init__.py  __main__.py  constants.py  context.py  default_mapping.py  fields.py  from_mrc.py  from_xml.py  issue.py  mapper.py  marc_query.py  marc_record.py  query.py  record.py  selectors.py
marcdantic/fieldsets/: __init__.py  base.py  control_fields.py  issue.py  leader.py  marc_issue.py  numbers_and_codes.py  title_related.py
marcdantic/selectors/: __init__.py  common.py  control_fields.py  issue.py  leader.py  local_fields.py  marc_issues.py  numbers_and_codes.py  title_related.py  variable_field.py
record_parts/: __init__.py  control_fields.py  leader.py  numbers_and_codes.py
tests/: test_mapper.py  test_parsers.py  test_parsing.py  test_search_request.py  test_search_requests.py  test_selectors.py
