[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "marcdantic"
version = "0.1.2"
authors = [
    {name = "Robert Randiak", email = "randiak@protonmail.com"}
]
requires-python = ">=3.12"
dynamic = ["dependencies", "description", "readme"]

[tool.setuptools]
packages = [
    "marcdantic",
    "marcdantic.selectors"
]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
description = {file = "description.txt"}
readme = {file = "README.md"}
